--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -5,49 +5,42 @@
 {% for entry in entries %}
 
 
-<div class="ctop"></div>
-<div class="content">
-<div id="post-{{entry.key}}">
-<div class="nifty"><h2><a href="/{{ entry.link }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
+<div>
+	<div id="post-{{entry.key}}">
+		<div class="nifty"><h2><a href="/{{ entry.link }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
 
 
 
-{{entry.content_excerpt|safe}}
+		{{entry.content_excerpt|safe}}
 
-<div class="meta">{% if entry.strtags %}Tags: {%for tag in entry.tags%}<a href="/tag/{{tag|urlencode}}">{{tag}}</a> {%endfor%}<br><br>{%endif%}  Posted in {%for cate in entry.categories%} <a href="/category/{{cate.slug}}">{{cate.name}}</a> {%endfor%} | {%if self.is_admin%}<a href="{{entry.edit_url}}">Edit</a> | {%endif%}  
-<!--<a href="/{{entry.link}}#comments">Comments({{entry.commentcount}})&#187;</a> | -->
-<a href="/{{entry.link}}#disqus_thread">Disqus Comments</a></div>
+		<div class="meta">{% if entry.strtags %}Tags: {%for tag in entry.tags%}<a href="/tag/{{tag|urlencode}}">{{tag}}</a> {%endfor%}<br><br>{%endif%}  Posted in {%for cate in entry.categories%} <a href="/category/{{cate.slug}}">{{cate.name}}</a> {%endfor%} | {%if self.is_admin%}<a href="{{entry.edit_url}}">Edit</a> | {%endif%}  
+		<!--<a href="/{{entry.link}}#comments">Comments({{entry.commentcount}})&#187;</a> | -->
+		<a href="/{{entry.link}}#disqus_thread">Comments</a></div>
+	</div>
 </div>
 
-</div>
-<div class="cbottom"></div>
 <div class="space"></div>
 {% endfor %}
 
-<div class="ctop"></div>
-<div class="content">
-<div class="alignleft">{% if show_next %}<a href="/page/{{ pageindex|add:"1" }}">&laquo; Older Entries</a>{%endif%}</div>
-<div class="alignright">{% if show_prev %}<a href="/page/{{ pageindex|add:"-1" }}">&laquo; Newer Entries</a>{%endif%}</div>
-<div class="clear"></div></div>
-<div class="cbottom"></div>
-<div class="space"></div>
+<div>
+	<div class="alignleft">{% if show_next %}<a href="/page/{{ pageindex|add:"1" }}">&laquo; Older Entries</a>{%endif%}</div>
+	<div class="alignright">{% if show_prev %}<a href="/page/{{ pageindex|add:"-1" }}">&laquo; Newer Entries</a>{%endif%}</div>
+	<div class="clear"></div>
+	<div class="space"></div>
+</div>
 
 {% else %}
-<div class="ctop"></div>
 <div class="content">
 <h2>Not Found</h2>
 <p>Sorry, but you are looking for something that isn't here.</p>
 </div>
 <div class="clear"></div>
-<div class="cbottom"></div>
 <div class="space"></div>
 
 
 {% endif %}
 
-</div>
 
-{% include "sidebar.html" %}
 {% endblock %}
 
 
