--- a/themes/default/templates/adsense_sidebar.html
+++ b/themes/default/templates/adsense_sidebar.html
@@ -1,10 +1,14 @@
-<script type="text/javascript"><!--
-google_ad_client = "pub-6293971471163289";
-google_ad_slot = "1503208580";
-google_ad_width = 200;
-google_ad_height = 200;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<!--
+<div id="googlead" class="nav">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- 300x250 -->
+	<ins class="adsbygoogle"
+		 style="display:inline-block;width:300px;height:250px"
+		 data-ad-client="ca-pub-6293971471163289"
+		 data-ad-slot="4850115481"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+</div>
+	-->
+
