--- a/themes/default/templates/single.html
+++ b/themes/default/templates/single.html
@@ -2,77 +2,86 @@
 {% block title %} {{entry.title}} - {{blog.title}} {% endblock %}
 {% block content%}
 
-<div class="content">
+<div>
 
-{% if entry %}
+	{% if entry %}
 
-<div id="post-{{entry.key}}">
-<div class="nifty"><h2><a href="/{{ entry.link|safe }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
-{%mf entry_content %}
-{{ entry.content|safe }}
-<!-- wumii -->
-<div class="wumii-hook">
-    <input type="hidden" name="wurl" value="{{blog.baseurl}}/{{ entry.link }}" />
-    <input type="hidden" name="wtitle" value="{{entry.title}}" />
-</div>
-<script>
-    var wumiiSitePrefix = "{{blog.baseurl}}";
-</script>
-<script type="text/javascript" id="wumiiRelatedItems" src="http://widget.wumii.com/ext/relatedItemsWidget.htm?type=1&amp;mode=3&amp;num=5"></script>
-<a href="http://www.wumii.com/widget/relatedItems.htm" style="border:0;">
-    <img src="http://static.wumii.com/images/pixel.png" alt="无觅相关文章插件" style="border:0;padding:0;margin:0;" />
-</a>
-<p style="display: none;">
-    {%for tag in entry.tags%}<a rel="tag">{{tag}}</a>{%endfor%}
-</p>
-<!-- wumii -->
-{%endmf%}
-{%mf after_entry_content%}
-<div class=share>
-  <a class="bshareDiv" href="http://www.bshare.cn/share">分享按钮
-  </a><script language="javascript" type="text/javascript" src="http://www.bshare.cn/button.js#uuid=fdc6216e-460e-4354-8eed-cd34cbbd803b&style=2&textcolor=#000000&bgcolor=none&bp=sinaminiblog,greader,twitter,linkedin,douban,renren,facebook,reddit&ssc=false&sn=true&text=Share"></script>
-</div>
-<div class="meta">
-{% if entry.strtags %}Tags: {%for tag in entry.tags%}<a href="/tag/{{tag|urlencode}}">{{tag}}</a> {%endfor%}<br><br>{%endif%}  Posted in {%for cate in entry.categories%} <a href="/category/{{cate.slug}}">{{cate.name}}</a> {%endfor%} | {%if self.is_admin%}<a href="{{entry.edit_url}}">Edit</a>  {%endif%}
-{%if blog.allow_trackback and entry.allow_trackback%}
-<div style="padding:2px 0">
-Trackback:<a href='{{entry.trackbackurl|safe}}'>{{entry.trackbackurl}}</a>
-</div>
-{%endif%}
-</div>
-{%endmf%}
-</div>
-</div>
-<div class="space"></div>
+	<div id="post-{{entry.key}}">
+		<div class="nifty"><h2><a href="/{{ entry.link|safe }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
+		{%mf entry_content %}
+		{{ entry.content|safe }}
+		<!-- responsive google ads -->
+		<div>
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- post-responsive -->
+			<ins class="adsbygoogle"
+				 style="display:block"
+				 data-ad-client="ca-pub-6293971471163289"
+				 data-ad-slot="1080893880"
+				 data-ad-format="auto"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+		</div>
+		<!-- end responsive google ads -->
+		<!-- wumii -->
+		<div class="wumii-hook">
+				<input type="hidden" name="wurl" value="{{blog.baseurl}}/{{ entry.link }}" />
+				<input type="hidden" name="wtitle" value="{{entry.title}}" />
+		</div>
+		<script>
+				var wumiiSitePrefix = "{{blog.baseurl}}";
+		</script>
+		<script type="text/javascript" id="wumiiRelatedItems" src="http://widget.wumii.com/ext/relatedItemsWidget.htm?type=1&amp;mode=3&amp;num=5"></script>
+		<a href="http://www.wumii.com/widget/relatedItems.htm" style="border:0;">
+				<img src="http://static.wumii.com/images/pixel.png" alt="无觅相关文章插件" style="border:0;padding:0;margin:0;" />
+		</a>
+		<p style="display: none;">
+				{%for tag in entry.tags%}<a rel="tag">{{tag}}</a>{%endfor%}
+		</p>
+		<!-- wumii -->
+		{%endmf%}
+		{%mf after_entry_content%}
+		<div class=share>
+			<a class="bshareDiv" href="http://www.bshare.cn/share">分享按钮
+			</a><script language="javascript" type="text/javascript" src="http://www.bshare.cn/button.js#uuid=d17d117c-c8aa-4da9-94b0-d7e4c4f215d9&style=2&textcolor=#000000&bgcolor=none&bp=sinaminiblog,twitter,linkedin,douban,renren,facebook,reddit&ssc=false&sn=true&text=Share"></script>
+		</div>
+		<div class="meta">
+			{% if entry.strtags %}Tags: {%for tag in entry.tags%}<a href="/tag/{{tag|urlencode}}">{{tag}}</a> {%endfor%}<br><br>{%endif%}  Posted in {%for cate in entry.categories%} <a href="/category/{{cate.slug}}">{{cate.name}}</a> {%endfor%} | {%if self.is_admin%}<a href="{{entry.edit_url}}">Edit</a>  {%endif%}
+			{%if blog.allow_trackback and entry.allow_trackback%}
+				<div style="padding:2px 0">
+				Trackback:<a href='{{entry.trackbackurl|safe}}'>{{entry.trackbackurl}}</a>
+				</div>
+			{%endif%}
+		</div>
+		{%endmf%}
+		</div>
 
 
-<div class="content">
-{% include "comment_disqus.html" %}
+		<div>
+			<!-- You can start editing here. -->
+			{% if entry.allow_comment %}
+			{% include "comment_disqus.html" %}
+			<div id="disqus_thread"></div>
+					<script type="text/javascript">
+							/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+							var disqus_shortname = 'getfoodnyc'; // required: replace example with your forum shortname
 
-<!-- You can start editing here. -->
-{% if entry.allow_comment %}
-<div id="disqus_thread"></div>
-	<script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'perlfectblog'; // required: replace example with your forum shortname
+							/* * * DON'T EDIT BELOW THIS LINE * * */
+							(function() {
+									var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+									dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+									(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+							})();
+					</script>
+					<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+					<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+			{% else %}
+			<p class="nocomments">ÆÀÂÛÒÑ¹Ø±Õ</p>
+			{% endif %}
+		</div>
+	<div class="space"></div>
 
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
-{% else %}
-<p class="nocomments">ÆÀÂÛÒÑ¹Ø±Õ</p>
-{% endif %}
+	{%endif%}
 </div>
-<div class="space"></div>
-
-{%endif%}
-</div>
-{% include "sidebar.html" %}
 {% endblock %}
