--- a/themes/default/blog.css
+++ b/themes/default/blog.css
@@ -137,6 +137,10 @@ a:focus {
     text-shadow: 0 1px 1px #333;
 }
 
+.content img {
+	width: 80%;
+}
+
 .footer {
     text-align: center;
     padding: 1em 0;
