--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="{{ blog.static_url }}/themes/{{ blog.theme_name }}/css/layouts/blog-old-ie.css" media="screen"/>
     <![endif]-->
     <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="{{ blog.static_url }}/themes/{{ blog.theme_name }}/css/layouts/blog.css"  media="screen"/>
+        <link rel="stylesheet" href="{{ blog.static_url }}/themes/{{ blog.theme_name }}/css/layouts/blog.css?v1.0"  media="screen"/>
     <!--<![endif]-->
 
 <link rel="alternate" type="application/atom+xml" title="{{ blog.title }} RSS Feed" href="{{ blog.feedurl }}" />
