--- a/themes/default/templates/page.html
+++ b/themes/default/templates/page.html
@@ -11,7 +11,7 @@
 
 {% if entry %}
 
-	<div id="post-{{entry.key}}">
+	<div class="content-post" id="post-{{entry.key}}">
 		<div class="nifty"><h2><a href="/{{ entry.link }}" rel="bookmark" title="Permanent Link to {{entry.title}}">{{entry.title}}</a> <span class="date">{{entry.date|datetz:"F jS, Y"}}</span></h2></div>
 
 		{{ entry.content|safe }}
