Be responsive, fix image size

--- a/themes/default/blog.css
+++ b/themes/default/blog.css
@@ -168,6 +168,10 @@ a:focus {
         position: static;
     }
 
+	.hide-for-mobile {
+		display: none;
+	}
+
     #layout {
         padding: 0;
     }
