--- a/themes/default/templates/sidebar.html
+++ b/themes/default/templates/sidebar.html
@@ -27,7 +27,7 @@
 	</nav>
 	<ul class="nav-list">
 		<li class="nav-item" >
-			<div id="searchbox" >
+			<div id="searchbox" class="hide-for-mobile">
 
 			<form method="get" id="searchform" action="http://www.google.com/search">
 					<input type="text" value="Search..." onfocus="if (this.value == 'Search...') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Search...';}" name="as_q" id="s" />
