--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -47,7 +47,7 @@
 			{% include "sidebar.html" %}
 		</div>
 		<div class="content pure-u-1 pure-u-med-3-4">
-			<div>
+			<div class="hide-for-mobile">
 				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 				<!-- leaderboard-responsive -->
 				<ins class="adsbygoogle"
